--- a/index.html
+++ b/index.html
@@ -54,43 +54,43 @@ Querying data using SQL. Generate reports and perform ad-hoc data analysis using
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/nyc taxi trip.png" alt="" /></a>
-								<h3><a href="#">NYC Taxi Trip</a></h3>
+								<a href="https://github.com/theabiodun/NYC-Taxi-Trip" class="image featured"><img src="images/nyc taxi trip.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/NYC-Taxi-Trip">NYC Taxi Trip</a></h3>
 								<p>A Power BI visualisation of analysed New York City taxi trips.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/Report 3.png" alt="" /></a>
-								<h3><a href="#">Superstore</a></h3>
+								<a href="https://github.com/theabiodun/Superstore" class="image featured"><img src="images/Report 3.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/Superstore">Superstore</a></h3>
 								<p>Superstore Analysis in Excel.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/employee dataset.png" alt="" /></a>
-								<h3><a href="#">Employee Report</a></h3>
+								<a href="https://github.com/theabiodun/Employee-Report" class="image featured"><img src="images/employee dataset.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/Employee-Report">Employee Report</a></h3>
 								<p>Exploring and understanding employee behaviors.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/airline project.png" alt="" /></a>
-								<h3><a href="#">US Airline Report</a></h3>
+								<a href="https://github.com/theabiodun/US-Airline-Report" class="image featured"><img src="images/airline project.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/US-Airline-Report">US Airline Report</a></h3>
 								<p>Report showing the reliability of airlines in the US.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/shark analysis.png" alt="" /></a>
-								<h3><a href="#">Shark Attack</a></h3>
+								<a href="https://github.com/theabiodun/Shark-Attack" class="image featured"><img src="images/shark analysis.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/Shark-Attack">Shark Attack</a></h3>
 								<p>Shark attack hsitory.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/stock price.png" alt="" /></a>
-								<h3><a href="#">Stock Price</a></h3>
+								<a href="https://github.com/theabiodun/Stock-Price" class="image featured"><img src="images/stock price.png" alt="" /></a>
+								<h3><a href="https://github.com/theabiodun/Stock-Price">Stock Price</a></h3>
 								<p>Historical stock price of famous companies.</p>
 							</article>
 						</div>
@@ -112,12 +112,12 @@ Querying data using SQL. Generate reports and perform ad-hoc data analysis using
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#twitter.com/abiodunadedoyin" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://x.com/abiodun_fash" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								
 								
 								<li><a href="https://www.linkedin.com/in/abiodun-adedoyin/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#abiodunadedoyin6@gmail.com" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#https://github.com/theabiodun" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="abiodunadedoyin6@gmail.com" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
+								<li><a href="https://github.com/theabiodun" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
