--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Querying data using SQL. Generate reports and perform ad-hoc data analysis using
 						
 					</header>
 							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Find me on ... <br> abiodunadedoyin6@gmail.com<br/> </h3>
 							<ul class="social">
 								<li><a href="https://x.com/abiodun_fash" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								
