--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Querying data using SQL. Generate reports and perform ad-hoc data analysis using
 							<article class="box style2">
 								<a href="https://github.com/theabiodun/Shark-Attack" class="image featured"><img src="images/shark analysis.png" alt="" /></a>
 								<h3><a href="https://github.com/theabiodun/Shark-Attack">Shark Attack</a></h3>
-								<p>Shark attack hsitory.</p>
+								<p>Shark attack history.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -110,7 +110,7 @@ Querying data using SQL. Generate reports and perform ad-hoc data analysis using
 						
 					</header>
 							<hr />
-							<h3>Location:</h3> <h2>London, United Kingdom. <br> abiodunadedoyin6@gmail.com<br/> </h2>
+							<h3>Location: London, United Kingdom. <br> abiodunadedoyin6@gmail.com<br/> </h3> 
 							<ul class="social">
 								<li><a href="https://x.com/abiodun_fash" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								
