--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hey. I'm <strong>Abiodun Adedoyin</strong>.</h1>
 							</header>
-							<p>I am a <strong>Data Analyst</strong>, with expertise in data analysis and reporting, query optimization, database design, and data modelling.
+							<p>I am a dedicated <strong>Data Analyst</strong>, with expertise in data analysis and reporting, query optimization, database design, and data modelling.
 
 Querying data using SQL. Generate reports and perform ad-hoc data analysis using SQL. Developing dashboards on Tableau and Looker Studio. Data analysis and reporting using Google Sheets and Excel. 📚 Projects. </p>
 							<a href="#portfolio" class="button large scrolly">My recent works...</a>
