--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
 							<span class="image fit"><img src="images/newprofile.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Hey. I'm <strong>Abiodun Adedoyin</strong>.</h1>
-							</header>
-							<p>I am a dedicated <strong>Data Analyst</strong>, with expertise in data analysis and reporting, query optimization, database design, and data modelling.
-
-Querying data using SQL. Generate reports and perform ad-hoc data analysis using SQL. Developing dashboards on Tableau and Looker Studio. Data analysis and reporting using Google Sheets and Excel. 📚 Projects. </p>
-							<a href="#portfolio" class="button large scrolly">My recent works...</a>
-						</div>
+    <header>
+        <h1>Hey. I'm <strong>Abiodun Adedoyin</strong>.</h1>
+    </header>
+    <p>Hello! I am <strong>Abiodun Adedoyin</strong>, a dedicated <strong>Pharmacist and Data Analyst</strong> passionate about transforming raw data into actionable insights. With a strong foundation in healthcare and analytical skills honed through experience, I specialize in <strong>data visualization</strong> and <strong>data-driven decision-making</strong>. Proficient in <strong>Excel</strong>, <strong>Power BI</strong>, and <strong>SQL</strong>, I excel at creating clear, impactful visualizations and dashboards that illuminate complex data patterns and drive strategic outcomes.</p>
+    <p>My dual expertise in pharmacology and data analysis uniquely positions me to bridge gaps between technical data solutions and practical healthcare applications. I thrive in roles that challenge me to analyze, optimize, and communicate data in a way that leads to meaningful, informed decision-making. Whether I am building dynamic dashboards or generating ad-hoc reports, my goal is always to provide clarity and insight.</p>
+    <a href="#portfolio" class="button large scrolly">My recent works...</a>
+</div>
 					</div>
 				</div>
 			</article>
