--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <h1>Hey. I'm <strong>Abiodun Adedoyin</strong>.</h1>
     </header>
-    <p>Hello! I am <strong>Abiodun Adedoyin</strong>, a dedicated <strong>Pharmacist and Data Analyst</strong> passionate about transforming raw data into actionable insights. With a strong foundation in healthcare and analytical skills honed through experience, I specialize in <strong>data visualization</strong> and <strong>data-driven decision-making</strong>. Proficient in <strong>Excel</strong>, <strong>Power BI</strong>, and <strong>SQL</strong>, I excel at creating clear, impactful visualizations and dashboards that illuminate complex data patterns and drive strategic outcomes.</p>
+    <p>Hello! I am Abiodun Adedoyin, a dedicated Pharmacist and Data Analyst passionate about transforming raw data into actionable insights. With a strong foundation in healthcare and analytical skills honed through experience, I specialize in data visualization and data-driven decision-making. Proficient in Excel, Power BI, and SQL, I excel at creating clear, impactful visualizations and dashboards that illuminate complex data patterns and drive strategic outcomes.</p>
     <p>My dual expertise in pharmacology and data analysis uniquely positions me to bridge gaps between technical data solutions and practical healthcare applications. I thrive in roles that challenge me to analyze, optimize, and communicate data in a way that leads to meaningful, informed decision-making. Whether I am building dynamic dashboards or generating ad-hoc reports, my goal is always to provide clarity and insight.</p>
     <a href="#portfolio" class="button large scrolly">My recent works...</a>
 </div>
