--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Abiodun Adedoyin</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+    <title>Abiodun Adedoyin</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="Welcome to the portfolio of Abiodun Adedoyin, a skilled Data Analyst and Pharmacist with expertise in Excel, Power BI, and SQL. Discover projects showcasing advanced data visualization, data-driven insights, and impactful dashboards." />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
 	<body class="is-preload">
 
 		<!-- Nav -->
