--- a/index.html
+++ b/index.html
@@ -149,5 +149,26 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+
+
+		<script>
+    const toggleButton = document.getElementById("dark-mode-toggle");
+
+    // Apply saved dark mode preference
+    if (localStorage.getItem("dark-mode") === "enabled") {
+        document.body.classList.add("dark-mode");
+    }
+
+    // Toggle dark mode
+    toggleButton.addEventListener("click", () => {
+        document.body.classList.toggle("dark-mode");
+        if (document.body.classList.contains("dark-mode")) {
+            localStorage.setItem("dark-mode", "enabled");
+        } else {
+            localStorage.setItem("dark-mode", "disabled");
+        }
+    });
+</script>
+
 	</body>
 </html>
