--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
+				<!-- Dark Mode Toggle Button -->
+    <button id="dark-mode-toggle">Toggle Dark Mode</button>
 			</nav>
 
 		<!-- Home -->
