--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
                     <header>
                         <h1>Hey. I am <strong>Abiodun Adedoyin</strong>.</h1>
                     </header>
-                    <p>Hello! I am Abiodun Adedoyin, a dedicated Pharmacist and Data Analyst 
-                        passionate about transforming raw data into actionable insights. With 
-                        a strong foundation in healthcare and analytical skills honed through 
-                        experience, I specialize in data visualization and data-driven decision-making.</p>
-                    <p>My dual expertise in pharmacology and data analysis uniquely positions 
-                        me to bridge gaps between technical data solutions and practical healthcare 
-                        applications. I thrive in roles that challenge me to analyze, optimize, and 
-                        communicate data in a way that leads to meaningful, informed decision-making.</p>
+                    <p>
+    Hi, my name is Abi for short. I am a Pharmacist turned Data Analyst 
+    with expertise in tools like Power BI, Excel, and SQL. 
+    My background in healthcare and data analysis helps me 
+    transform data into actionable insights, specializing in 
+    visualizations, predictive analysis, and decision-making 
+    support.
+</p>
+
                     <a href="#portfolio" class="button large scrolly">My recent works...</a>
                 </div>
             </div>
