--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
                         </a>
                         <h3><a href="https://github.com/theabiodun/NYC-Taxi-Trip">NYC Taxi Trip</a></h3>
                         <p>A Power BI visualization of analyzed New York City taxi trips.</p>
+<div class="project-details">
+    <h2 class="project-title">NYC Taxi Trip Analysis</h2>
+    
+    <p class="project-summary">
+        A comprehensive Power BI analysis of NYC taxi data from 2017-2020, 
+        revealing insights into urban mobility trends, fare patterns, 
+        and payment preferences in New York City.
+        <span id="more-text" style="display: none;">
+            <br><br>
+            <strong>Objectives:</strong> Transform raw data from NYC taxi trips into 
+            meaningful visual insights, focusing on fare trends, popular locations, 
+            payment methods, and daily/weekly travel patterns.
+            <br><br>
+            <strong>My Approach:</strong> <br>
+            <ul>
+                <li><strong>Data Preparation:</strong> Cleaned and organized large datasets, ensuring data accuracy and relevance.</li>
+                <li><strong>Visualization in Power BI:</strong> Designed an interactive dashboard with custom visuals and filters to allow for dynamic exploration.</li>
+                <li><strong>Insights Extraction:</strong> Used bar charts, pie charts, and time-based line graphs to reveal key patterns.</li>
+            </ul>
+            <br>
+            <strong>Key Findings:</strong> <br>
+            <ul>
+                <li><strong>Average Metrics:</strong> $12 average fare, 3 km average trip distance, and over $324M in total fares.</li>
+                <li><strong>Popular Pickup Spots:</strong> LaGuardia, JFK Airport, and Central Harlem are among the top locations.</li>
+                <li><strong>Payment Insights:</strong> $198M in credit card payments vs. $125M in cash payments, highlighting payment preferences.</li>
+                <li><strong>Time Trends:</strong> Yearly and weekly pickup trends provide insights into city activity patterns.</li>
+            </ul>
+            <br>
+            <strong>Reflection:</strong> This project gave me hands-on experience in end-to-end data analysis and business intelligence, enhancing my skills in Power BI and data storytelling.
+        </span>
+        <a href="javascript:void(0);" onclick="toggleReadMore()" id="read-more-link">Read more</a>
+    </p>
+</div>
+
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
