--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                             <img src="images/nyc taxi trip.png" alt="Power BI visualization of NYC Taxi Trip data" />
                         </a>
                         <h3><a href="https://github.com/theabiodun/NYC-Taxi-Trip">NYC Taxi Trip</a></h3>
-                        <p>A Power BI visualization of analyzed New York City taxi trips.</p>
+                        <p>A deep dive into NYC’s urban mobility through Power BI, 
+visualizing taxi data from 2017-2020. Discover fare trends, popular pickup spots, 
+and payment insights that reveal New York’s travel patterns.</p>
 
                     </article>
                 </div>
