--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
 visualizing taxi data from 2017-2020. Discover fare trends, popular pickup spots, 
 and payment insights that reveal New York’s travel patterns.</p>
 
+
+                        <div class="col-4 col-6-medium col-12-small">
+    <article class="box style2">
+        <a href="https://github.com/theabiodun/NYC-Taxi-Trip" class="image featured hover-effect">
+            <img src="images/nyc_taxi_trip.png" alt="NYC Taxi Trip Project" />
+        </a>
+        <h3><a href="https://github.com/theabiodun/NYC-Taxi-Trip">NYC Taxi Trip</a></h3>
+        <p>A deep dive into NYC’s urban mobility...</p>
+    </article>
+</div>
+
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
