--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
+    
     <title>Abiodun Adedoyin</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,10 +72,11 @@ and payment insights that reveal New York’s travel patterns.</p>
                 <div class="col-4 col-6-medium col-12-small">
                     <article class="box style2">
                         <a href="https://github.com/theabiodun/Superstore" class="image featured">
-                            <img src="images/Report 3.png" alt="Superstore Analysis in Excel" />
+                            <img src="images/Report 3.png" alt="Superstore Data Report" />
                         </a>
                         <h3><a href="https://github.com/theabiodun/Superstore">Superstore</a></h3>
-                        <p>Superstore Analysis in Excel.</p>
+                        <p>An Excel dashboard revealing key insights into sales, returns, and regional performance for a retail superstore. 
+                            Explore data-driven findings on profit margins, top products, and customer segments, designed to help understand and improve business outcomes.</p>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
