--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ and payment insights that reveal New York’s travel patterns.</p>
                         <a href="https://github.com/theabiodun/Superstore" class="image featured">
                             <img src="images/Report 3.png" alt="Superstore Data Report" />
                         </a>
-                        <h3><a href="https://github.com/theabiodun/Superstore">Superstore</a></h3>
+                        <h3><a href="https://github.com/theabiodun/Superstore">Superstore Analysis in Excel</a></h3>
                         <p>An Excel dashboard revealing key insights into sales, returns, and regional performance for a retail superstore. 
                             Explore data-driven findings on profit margins, top products, and customer segments, designed to help understand and improve business outcomes.</p>
                     </article>
