--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <h1>Hey. I am <strong>Abiodun Adedoyin</strong>.</h1>
                     </header>
                     <p>
-    Hi, You can call me Abi for short. I am a Pharmacist turned Data Analyst 
+    Hi, You can call me <strong>Abi</strong> for short. I am a Pharmacist turned Data Analyst 
     with expertise in tools like Power BI, Excel, and SQL. 
     My background in healthcare and data analysis helps me 
     transform data into actionable insights, specializing in 
