--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@ and payment insights that reveal New York’s travel patterns.</p>
                         <a href="https://github.com/theabiodun/Employee-Report" class="image featured">
                             <img src="images/employee dataset.png" alt="Exploration and understanding of employee behaviors" />
                         </a>
-                        <h3><a href="https://github.com/theabiodun/Employee-Report">Employee Report</a></h3>
-                        <p>Exploring and understanding employee behaviors.</p>
+                        <h3><a href="https://github.com/theabiodun/Employee-Report">Employee Insights Dashboard</a></h3>
+                      <div style="text-align: justify;">  
+                        <p>**Employee Insights Dashboard**  
+An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like gender distribution, job satisfaction, distance to work, and promotion status, 
+                            offering a clear view into employee retention, departmental breakdowns, and workforce dynamics.</p>
+                          </div>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
