--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                             <img src="images/nyc taxi trip.png" alt="Power BI visualization of NYC Taxi Trip data" />
                         </a>
                         <h3><a href="https://github.com/theabiodun/NYC-Taxi-Trip">NYC Taxi Trip Analysis</a></h3>
+                        <div style="text-align: justify;">
                         <p>A deep dive into NYC’s urban mobility through Power BI, 
 visualizing taxi data from 2017-2020. Discover fare trends, popular pickup spots, 
 and payment insights that reveal New York’s travel patterns.</p>
-
+ </div>
 
                     </article>
                 </div>
@@ -75,8 +76,10 @@ and payment insights that reveal New York’s travel patterns.</p>
                             <img src="images/Report 3.png" alt="Superstore Data Report" />
                         </a>
                         <h3><a href="https://github.com/theabiodun/Superstore">Superstore Analysis in Excel</a></h3>
+                        <div style="text-align: justify;">
                         <p>An Excel dashboard revealing key insights into sales, returns, and regional performance for a retail superstore. 
                             Explore data-driven findings on profit margins, top products, and customer segments, designed to help understand and improve business outcomes.</p>
+                             </div>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
@@ -86,7 +89,7 @@ and payment insights that reveal New York’s travel patterns.</p>
                         </a>
                         <h3><a href="https://github.com/theabiodun/Employee-Report">Employee Insights Dashboard</a></h3>
                       <div style="text-align: justify;">  
-                        <p>**Employee Insights Dashboard**  
+                        <p> 
 An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like gender distribution, job satisfaction, distance to work, and promotion status, 
                             offering a clear view into employee retention, departmental breakdowns, and workforce dynamics.</p>
                           </div>
