--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
                         <a href="https://github.com/theabiodun/US-Airline-Report" class="image featured">
                             <img src="images/airline project.png" alt="Report showing reliability of airlines in the US" />
                         </a>
-                        <h3><a href="https://github.com/theabiodun/US-Airline-Report">US Airline Report</a></h3>
-                        <p>Report showing the reliability of airlines in the US.</p>
+                        <h3><a href="https://github.com/theabiodun/US-Airline-Report">Unveiling the Dynamics of US Airline Operations</a></h3>
+
+                        <div style="text-align: justify;">
+                        <p>A comprehensive Power BI dashboard analyzing over 5 million U.S. flights from 2015. This project uncovers insights into airline reliability, 
+                            common causes of cancellations, and peak travel times. Explore how weather, delays, and operational patterns impact the airline industry's performance and passenger experience.</p>
+                             </div>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
