--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
                         <h3><a href="https://github.com/theabiodun/US-Airline-Report">Unveiling the Dynamics of US Airline Operations</a></h3>
 
                         <div style="text-align: justify;">
-                        <p>A comprehensive Power BI dashboard analyzing over 5 million U.S. flights from 2015. This project uncovers insights into airline reliability, 
-                            common causes of cancellations, and peak travel times. Explore how weather, delays, and operational patterns impact the airline industry's performance and passenger experience.</p>
+                        <p>A Power BI dashboard analyzing over 5 million U.S. flights from 2015. This project uncovers insights into airline reliability, 
+                            common causes of cancellations, and peak travel times. It explores how weather, delays, and operational patterns impact the airline industry's performance and passenger experience.</p>
                              </div>
                     </article>
                 </div>
