--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ and payment insights that reveal New York’s travel patterns.</p>
                         </a>
                         <h3><a href="https://github.com/theabiodun/Superstore">Superstore Analysis in Excel</a></h3>
                         <div style="text-align: justify;">
-                        <p>An Excel dashboard revealing key insights into sales, returns, and regional performance for a retail superstore. 
-                            Explore data-driven findings on profit margins, top products, and customer segments, designed to help understand and improve business outcomes.</p>
+                        <p>An Excel dashboard revealing key insights into sales, returns, and regional performance for a retail superstore, 
+                            exploring data-driven findings on profit margins, top products, and customer segments, to help understand and improve business outcomes.</p>
                              </div>
                     </article>
                 </div>
@@ -104,7 +104,7 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
 
                         <div style="text-align: justify;">
                         <p>A Power BI dashboard analyzing over 5 million U.S. flights from 2015. This project uncovers insights into airline reliability, 
-                            common causes of cancellations, and peak travel times. It explores how weather, delays, and operational patterns impact the airline industry's performance and passenger experience.</p>
+                            common causes of cancellations, and peak travel times, exploring how weather, delays, and operational patterns impact the airline industry's performance and passenger experience.</p>
                              </div>
                     </article>
                 </div>
