--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
                         <a href="https://github.com/theabiodun/Shark-Attack" class="image featured">
                             <img src="images/shark analysis.png" alt="Historical data on shark attacks" />
                         </a>
-                        <h3><a href="https://github.com/theabiodun/Shark-Attack">Shark Attack</a></h3>
-                        <p>Shark attack history.</p>
+                        <h3><a href="https://github.com/theabiodun/Shark-Attack">Shark Attack Analysis</a></h3>
+                        <div style="text-align: justify;">
+                        <p>A thrilling dive into global shark attack data using Power BI. Uncovered key insights on attack trends, impacted regions, and the demographics most affected. 
+                            This analysis reveals patterns in shark encounters, showcasing where, how, and who is most at risk in these marine interaction</p>
+                            </div>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
