--- a/index.html
+++ b/index.html
@@ -125,8 +125,11 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
                         <a href="https://github.com/theabiodun/Stock-Price" class="image featured">
                             <img src="images/stock price.png" alt="Historical stock prices of major companies" />
                         </a>
-                        <h3><a href="https://github.com/theabiodun/Stock-Price">Stock Price</a></h3>
-                        <p>Historical stock prices of famous companies.</p>
+                        <h3><a href="https://github.com/theabiodun/Stock-Price">Visual Insights into Stock Market Trends</a></h3>
+                          <div style="text-align: justify;">
+                        <p>Analyzing historical stock data for 10 major companies with Power BI, this dashboard provides insights on volume trends, pricing fluctuations, and market volatility.
+                        It Explores the performance of top stocks like Amazon and Google, revealing resilience and growth patterns amid market dynamics.</p>
+                               </div>
                     </article>
                 </div>
             </div>
