--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ An Excel dashboard analyzing a company's 1,000 employees. It covers metrics like
     <article id="contact" class="wrapper style4">
         <div class="container medium">
             <header>
-                <h2>Have me make stuff for you.</h2>
+                <h2>Discover My Expertise for Your Next Project.</h2>
             </header>
             <hr />
             <h3>Location: London, United Kingdom. <br> abiodunadedoyin6@gmail.com<br/></h3>
