--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#portfolio"><nav id="nav">
     <ul class="container">
         <li><a href="#top">Top</a></li>
-        <li><a href="#portfolio">Projects & Case Studies</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
