--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </header>
                     <p>
     Hi, You can call me <strong>Abi</strong> for short. I am a Pharmacist turned Data Analyst 
-    with expertise in tools like Power BI, Excel, and SQL. 
+    with Proficiency in Power BI, Excel, Tableau and SQL. 
     My background in healthcare and data analysis helps me 
     transform data into actionable insights, specializing in 
     visualizations, predictive analysis, and decision-making 
